tests/characterization/snapshots/backend_versions__current_release.snap
---
source: tests/characterization/versions.rs
expression: output
---
exit: 0
--- stdout ---
engine:
  v3.3.3 (installed, not in remote tags)
  v2.0.0
* v1.10.0 (installed)
  v1.2.3 (installed)
  v0.9.9
  vfoo (installed, not in remote tags)
--- stderr ---
--- end ---
