tests/characterization/snapshots/backend_versions__no_stable_versions.snap
---
source: tests/characterization/versions.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: no stable versions found for tranqu.
--- end ---
