tests/characterization/snapshots/backend_versions__unknown_component.snap
---
source: tests/characterization/versions.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: unknown component: bogus
--- end ---
