tests/characterization/snapshots/backend_versions__unusable_metadata.snap
---
source: tests/characterization/versions.rs
expression: output
---
exit: 0
--- stdout ---
engine:
  v2.0.0
  v1.2.3
--- stderr ---
--- end ---
